# rust-statics

./: .travis.yml  Cargo.toml  README.md
src/: angle.rs  lib.rs  mass.rs  vector.rs
