[package]
name = "statics"
version = "0.2.0"
authors = ["Russell Hay <me@russellhay.com>"]
description = "A library for calculating static forces on free body diagrams"
repository = "https://github.com/stainlessio/rust-statics"
categories = ["algorithms", "science", "simulation"]
keywords = ["statics", "force", "free-body", "structural-design"]
license = "MIT"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed"}

[dependencies]

[dev-dependencies]
cargo-watch = "^6"
extra-asserts = "^0.1"
